# CrackTools

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/aqcxbom/cracktools/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: payconfig
app/src/main/assets/cmnraw/: config.xml  data_pay_base
app/src/main/java/aqcxbom/cracktools/: MainActivity.java
app/src/main/java/com/JSONTest/: Pet.java  myJson.java
app/src/main/java/com/crackUtil/: AppInfoUtils.java  AppSign.java  FileUtils.java  GZipUtils.java  KernelUtils.java  LogUtils.java  PhoneUtils.java  SystemUtils.java
app/src/main/java/com/dynamic/: IDynamic.java
app/src/main/java/com/encryptionOP/: EncryptionUtils.java
app/src/main/jni/: Art.cpp  ObfuscationDefin.h  common.cpp  common.h  native.cpp  native.h
app/src/main/jni/common/: Art.h  common.cpp  common.h  md5.c
app/src/main/jni/libghttp/: Android.mk  ghttp.c  ghttp.h  http_trans.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/aqcxbom/cracktools/: ExampleUnitTest.java
